fix align inside header

--- a/11m.css
+++ b/11m.css
@@ -138,7 +138,7 @@
 
         .mod-header { 
             position: absolute;
-            padding: 20px;
+            padding: 0 20px 20px 20px;
             left: -4px;
             top: 190px; 
             z-index: 11;
